--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.youtube</groupId>
-	<artifactId>ecommerce</artifactId>
+	<groupId>com.slu</groupId>
+	<artifactId>groceryStore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>e-commerce-youtube</name>
+	<name>sluGroceryStore</name>
 	<description>API's for E-Commerce application</description>
 	<properties>
 		<java.version>1.8</java.version>
